--- a/VITE-PROJECT/index.html
+++ b/VITE-PROJECT/index.html
@@ -1,14 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scales=1.0"/>
-        <title>Media Queries and Responsiveness</title>
-        <link rel="stylesheet" href="style.css" />  
-    </head>
-    <body>
-        <h1 class="hero">CSS Custom Properties</h1>
-        <div class="main">
-            <button class="btn">Click Me</button>
-        </div>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="./js/main.js"></script>
+  </body>
 </html>
