--- a/VITE-PROJECT/index.html
+++ b/VITE-PROJECT/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
+    <section class="animation">
+      <h2 class="header-animation">Hello I'm Using an NPM Package</h2>
+    </section>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
