--- a/VITE-PROJECT/index.html
+++ b/VITE-PROJECT/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Media Queries and Responsiveness</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <div id="app"></div>
-    <section class="animation">
-      <h2 class="header-animation">Hello I'm Using an NPM Package</h2>
-    </section>
-    <script type="module" src="./js/main.js"></script>
+  <body class="cool">
+    <h1 class="hero">CSS Custom Properties</h1>
+    <div class="main">
+      <button class="btn">Click Me</button>
+    </div>
+    <script src="index.js"></script>
   </body>
 </html>
