--- a/VITE-PROJECT/index.html
+++ b/VITE-PROJECT/index.html
@@ -2,12 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Rocky Lyfe</title>
   </head>
-  <body>
-    <div id="app"></div>
+
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rocky Lyfe</title>
+  </head>
+
+  <body class="cool">
+    <header>
+      <ul class="menu">
+        <li class="menu-logo"><img src="public/rockyy.png" alt="" /></li>
+        <li class="menu-logo-name"><a href="#">Rocky Lyfe</a></li>
+        <li><a href="#"></a></li>
+        <li><button class="btn">ThEmE ChANgE</button></li>
+      </ul>
+    </header>
+    <div id="body">
+      <h1 class="main-title">Rocks and Minerals</h1>
+      <div id="buttons" class="buttons">
+        <button id="cold-rocks-btn">cool rocks</button>
+        <button id="dumb-rocks-btn">stoopid rocks</button>
+        <button id="poop-rocks-btn">heals diarrhea</button>
+        <button id="sale-rocks-btn">on sale</button>
+        <button id="all-rocks-btn">all rocks</button>
+      </div>
+    </div>
+    <div class="app"></div>
     <script type="module" src="./js/main.js"></script>
+    <script
+      src="https://kit.fontawesome.com/71279fc3d1.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
