--- a/VITE-PROJECT/index.html
+++ b/VITE-PROJECT/index.html
@@ -18,19 +18,17 @@
     <header>
       <ul class="menu">
         <li class="menu-logo"><img src="public/rockyy.png" alt="" /></li>
-        <li class="menu-logo-name"><a href="#">Rocky Lyfe</a></li>
+        <li class="menu-logo-name"><a href="#">Bald?</a></li>
         <li><a href="#"></a></li>
         <li><button class="btn">ThEmE ChANgE</button></li>
       </ul>
     </header>
     <div id="body">
-      <h1 class="main-title">Rocks and Minerals</h1>
+      <h1 class="main-title">Bald?</h1>
       <div id="buttons" class="buttons">
-        <button id="cold-rocks-btn">cool rocks</button>
-        <button id="dumb-rocks-btn">stoopid rocks</button>
-        <button id="poop-rocks-btn">heals diarrhea</button>
-        <button id="sale-rocks-btn">on sale</button>
-        <button id="all-rocks-btn">all rocks</button>
+        <button id="cold-rocks-btn">bald</button>
+        <button id="dumb-rocks-btn">not bald</button>
+        <button id="all-rocks-btn">bald and not bald</button>
       </div>
     </div>
     <div class="app"></div>
