--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bald or nah</title>
+    <title>Rocky Lyfe</title>
   </head>
 
   <body class="cool">
     <header>
       <ul class="menu">
         <li class="menu-logo"><img src="public/rockyy.png" alt="" /></li>
-        <li class="menu-logo-name"><a href="#">Bald?</a></li>
+        <li class="menu-logo-name"><a href="#">Rocky Lyfe</a></li>
         <li><a href="#"></a></li>
         <li><button class="btn">ThEmE ChANgE</button></li>
       </ul>
     </header>
     <div id="body">
-      <h1 class="main-title">Bald?</h1>
+      <h1 class="main-title">Rocks and Minerals</h1>
       <div id="buttons" class="buttons">
-        <button id="cold-rocks-btn">bald</button>
-        <button id="dumb-rocks-btn">not bald</button>
-        <button id="all-rocks-btn">bald and not bald</button>
+        <button id="sus-btn">Sus</button>
+        <button id="nyetsus-btn">Not Sus</button>
+        <button id="hmm-btn">Argueably Sus</button>
+        <button id="animals-btn">All Animals</button>
+        <button id="sale-btn">On Sale</button>
       </div>
     </div>
     <div class="app"></div>
