--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -2,29 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rocky Lyfe</title>
-  </head>
-
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rocky Lyfe</title>
+    <title>Exotic Animal Plug</title>
   </head>
 
   <body class="cool">
     <header>
       <ul class="menu">
-        <li class="menu-logo"><img src="public/rockyy.png" alt="" /></li>
-        <li class="menu-logo-name"><a href="#">Rocky Lyfe</a></li>
-        <li><a href="#"></a></li>
-        <li><button class="btn">ThEmE ChANgE</button></li>
+        <li><button class="btn">Change Theme</button></li>
       </ul>
     </header>
     <div id="body">
-      <h1 class="main-title">Rocks and Minerals</h1>
+      <h1 class="main-title">Exotic Animal Plug</h1>
       <div id="buttons" class="buttons">
         <button id="sus-btn">Sus</button>
         <button id="nyetsus-btn">Not Sus</button>
