--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -20,6 +20,9 @@
         <button id="hmm-btn">Argueably Sus</button>
         <button id="animals-btn">All Animals</button>
         <button id="sale-btn">On Sale</button>
+        <button id="herpes-btn">Has Herpes</button>
+        <button id="safe-btn">Herpes Free</button>
+        <button id="lightskin-btn">Lightskin</button>
       </div>
     </div>
     <div class="app"></div>
