--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -14,7 +14,7 @@
     </header>
     <div id="body">
       <h1 class="main-title">Exotic Animal Plug</h1>
-      <div class="buttons">
+      <div id="buttons" class="buttons">
         <button id="sus-btn">Sus</button>
         <button id="nyetsus-btn">Not Sus</button>
         <button id="hmm-btn">Argueably Sus</button>
